<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3" xmlns:app="http://schemas.android.com/apk/res-auto">

    <song.honey.ui.CircleImageView
        android:id="@+id/login_picture"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_name"
        app:border_color="@color/bg_Gray"
        app:border_width="2dp"
        android:src="@drawable/avatar2" />

    <RelativeLayout
        android:id="@+id/rl_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_picture" >

        <LinearLayout
            android:id="@+id/ll_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_zhlogin_prmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textColor="@color/text_red" />

            <EditText
                android:id="@+id/et_zhlogin_account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/login_et_bg"
                android:hint="@string/login_zhlogin_account_hint"
                android:inputType="text"
                android:padding="5dp"
                android:textColorHint="@color/bg_Gray_dark" />

            <EditText
                android:id="@+id/et_zhlogin_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_et_bg"
                android:hint="@string/login_zhlogin_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColorHint="@color/bg_Gray_dark" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_zhlogin_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ll_user_info"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_btn"
            android:text="@string/login_zhlogin_login"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textSize="25sp"
        android:text="@string/login_zhlogin_zhlogin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/bg_Gray_light" />

</RelativeLayout>