<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/tv_item_work_status"
            style="@style/item_text_3"
            android:layout_width="38.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_tab_bg_weijiesuan"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/chijia_work_item_havesettle"
            android:textColor="@color/text_white" />

        <TextView
            android:id="@+id/tv_item_work_name"
            style="@style/item_text_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:ellipsize="end"
           
            android:text="@string/app_name" />
        <TextView 
            android:id="@+id/tv_item_work_ifcontent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_green_stroke"
            android:layout_gravity="right"
            android:textColor="@color/text_red"
            android:text="@string/chijia_work_youliao"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="100"
            android:padding="2dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp" >

                <TextView
                    android:id="@+id/tv_item_work_singleprice"
                    style="@style/item_text_2"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/chijia_work_item_singleprice" />

                <ImageView
                    android:layout_width="1.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="1dip"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="1dip"
                    android:background="@color/item_work_line"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/tv_item_work_number"
                    style="@style/item_text_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chijia_work_item_number" />

                <ImageView
                    android:layout_width="1.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="1dip"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="1dip"
                    android:background="@color/item_work_line"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/tv_item_work_changge"
                    style="@style/item_text_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chijia_work_item_changge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp" >

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/item_chijia_work_time"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/tv_item_work_worktime"
                    style="@style/item_text_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="2013-5-9 21:56:56" />
                
                 <ImageView
                    android:id="@+id/iv_item_work_gender"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/tv_item_work_person"
                    style="@style/item_text_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/lisong" />
            </LinearLayout>
        </LinearLayout>

        

        <TextView
            android:id="@+id/tv_item_work_zhongjia"
            style="@style/item_text_0"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/chijia_work_item_zhongjia"
            android:textColor="@color/text_pink" />
    </LinearLayout>

</LinearLayout>