<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/appbg"
    android:scrollbars="none" >

    <LinearLayout
        android:id="@+id/topic_main_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <include layout="@layout/actionbar_usual" />

        <EditText
            android:id="@+id/et_baijia_add_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/edittext_bg_shape"
            android:gravity="top"
            android:hint="@string/baijia_add_name"
            android:padding="14.0dip"
            android:textColor="@color/text_balck"
            android:textColorHint="#ffcbcbcb"
            android:textSize="16.0sp" />

        <EditText
            android:id="@+id/et_baijia_add_money"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/edittext_bg_shape"
            android:gravity="top"
            android:hint="@string/baijia_add_money"
            android:inputType="numberDecimal"
            android:padding="14.0dip"
            android:textColor="@color/text_balck"
            android:textColorHint="#ffcbcbcb"
            android:textSize="16.0sp" />

        <EditText
            android:id="@+id/et_baijia_add_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/edittext_bg_shape"
            android:gravity="top"
            android:hint="@string/baijia_add_beizhu"
            android:inputType="textMultiLine"
            android:minHeight="160.0dip"
            android:padding="14.0dip"
            android:textColor="@color/text_balck"
            android:textColorHint="#ffcbcbcb"
            android:textSize="16.0sp" />
    </LinearLayout>

</ScrollView>